--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -184,3 +184,15 @@ $progress-bar-border-size: 0;
 
 // Margin & padding
 $progress-bar-pad: 0;
+
+
+// - - - - - - - - - - - - - - - - - - - - - - - - -
+// 33. Tooltips
+// - - - - - - - - - - - - - - - - - - - - - - - - -
+
+$tooltip-padding: rem-calc(6) rem-calc(9) rem-calc(7);
+$tooltip-bg: #000000;
+$tooltip-font-size: rem-calc(12);
+$tooltip-font-color: #ffffff;
+$tooltip-line-height: 1.4;
+$tooltip-max-width: 200px;
