--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9345,6 +9345,7 @@ i {
       transition: width 300ms ease-out, height 300ms ease-out; }
       .main-section .header .action-button.expandable .action-icon {
         display: block;
+        padding-right: 3px;
         -moz-transition: display 300ms ease-out;
         -o-transition: display 300ms ease-out;
         -webkit-transition: display 300ms ease-out;
