--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@
 // Vendor
 @import "foundation/scss/normalize";
 // bower:scss
+@import "../bower_components/foundation/scss/foundation.scss";
 // endbower
 @import 'foundation/scss/foundation';
 @import "font-awesome/scss/font-awesome";
