--- a/app/styles/_styles.scss
+++ b/app/styles/_styles.scss
@@ -183,6 +183,19 @@ select {
 	}
 }
 
+// Angular inline edit
+.ng-inline-edit__input {
+	display: inline-block !important;
+	width: auto !important;
+	height: auto !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	background-color: transparent !important;
+	border-bottom: 1px dashed $primary-color !important;
+	color: $white !important;
+}
+.ng-inline-edit__button { margin-left: 8px; }
+
 
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 // Buttons
@@ -573,13 +586,13 @@ table.datepicker {
 			color: $gray-light-3x;
 			outline: none;
 			&:hover {
-				color: $white;
 				.fa-close {
 					display: block;
 					&:hover { color: $primary-color; }
 				}
 			}
-			&.selected { color: $primary-color; }
+			&.clickable:hover { color: $white; }
+			&.selected { color: $primary-color !important; }
 			&.window {
 				padding-top: 5px;
 				padding-bottom: 6px;
